--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: node_js
 node_js:
+  - "6"
+  - "4"
+  - "0.12"
   - "0.10"
+  - "node"
 
-after_script: NODE_ENV=test istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+sudo: false
+after_script: NODE_ENV=test lab -r lcov | ./node_modules/.bin/coveralls
